--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -14,5 +14,5 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Install rsync
+      - name: HelloWorkflow
         run: echo hello
