--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -1,14 +1,11 @@
-name: Test1
+name: Release
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
-env:
-  CARGO_TERM_COLOR: always
-
+    tags:
+      - 'v[0-9]+.[0-9]+.[0-9]+'
+    branches-ignore:
+      - 'main'
 
 jobs:
   build:
